# tonella

./: .gitignore  .travis.yml  LICENSE  README.md  TODO.md  sonar-project.properties
.github/workflows/: make.yaml  platformio.yaml
doc/: Doxyfile
doc/web/: .gitignore
doc/web/01.home/: default.md
doc/web/02.case/: default.md
doc/web/03.circuit/: default.md
doc/web/04.code/: default.md
doc/web/05.figurines/: default.md
doc/web/06.further-work/: default.md
doc/web/07.credits/: default.md
doc/web/08.concept/: default.md
figurines/: .gitignore  README.md
figurines/bear/: README.md  bear.yaml
figurines/bee/: README.md  bee.yaml
figurines/bird/: README.md  bird.yaml
figurines/bunny/: README.md  bunny.yaml
figurines/butterfly/: README.md  butterfly.yaml
figurines/cake/: README.md  cake.yaml
figurines/cat/: README.md  cat.yaml
figurines/christmastree/: christmastree.yaml
figurines/cow/: README.md  cow.yaml
figurines/crocodile/: README.md  crocodile.yaml
figurines/donkey/: README.md  donkey.yaml
figurines/duck/: README.md  duck.yaml
figurines/elephant/: README.md  elephant.yaml
figurines/fish/: README.md  fish.yaml
figurines/fox/: README.md  fox.yaml  fox_joke.yaml
figurines/horse/: README.md  horse.yaml
figurines/lion/: README.md  lion.yaml
figurines/monkey/: README.md  monkey.yaml
figurines/penguin/: README.md  penguin.yaml
figurines/pig/: README.md  pig.yaml
figurines/sandmann/: sandmann.yaml
figurines/santaclaus/: README.md  santaclaus.yaml
figurines/sheep/: README.md  sheep.yaml
figurines/snake/: snake.yaml
figurines/snowman/: snowman.yaml
figurines/star/: star.yaml
src/figurines/: create_beep.py  create_command_sounds.py  create_sdcard.sh  getaudio.py  notes.txt  render_figurine.py  requirements.txt
src/readwritecards/: readwritecards.ino
src/readwriteultralightcards/: readwriteultralightcards.ino
src/tonella/: Makefile  dfplayer.cpp  dfplayer.h  idfplayer.h  iled.h  ilogger.h  imemory.h  iplayer.h  isystem.h  led.cpp  led.h  memory.cpp  memory.h  nfc.cpp  nfc.h  platformio.ini  player.cpp  player.h  statemachine.cpp  statemachine.h  system.cpp  system.h  tonella.ino  version.h  version.tpp
src/tonella/src/: idfplayer.h  infc.h  iplayer.h  isystem.h  led.cpp  led.h  logger.cpp  logger.h  (+10 more)
test/tonella/: CMakeLists.txt  mock_dfplayer.h  mock_led.h  mock_logger.h  mock_memory.h  mock_nfc.h  mock_player.h  mock_system.h  test_player.cpp  test_statemachine.cpp  tests.cpp
